<resources>
    <string name="app_name">BoaViagem</string>
    <string name="action_settings">Settings</string>
    <string name="erro_autenticacao">Usuário ou senha inválidos</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>

    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="data_saida">Data Saída</string>
    <string name="data_chegada">Data Chegada</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="qtd_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="categoria">Categoria</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Confirmação/Exclusão de Viagem</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="modo_viagem_sumario">Sumário Modo Viagem</string>
    <string name="preferencias">Preferências</string>
    <string name="informe_valor_limite">Informe Valor Limite:</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="valor_limite_sumario">Sumário Valor Limite</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="registro_salvo">Registro Salvo</string>
    <string name="erro_salvar">Erro ao Salvar</string>
    <string-array name="categoria_gasto">
        <item>Alimeto</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
