<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novo_gasto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvDestino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/categoria"/>
            <Spinner
                android:id="@+id/spCategoria"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:prompt="@string/categoria"/>

            <TableRow>
                <TextView android:text="Valor"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data"
                    android:layout_column="1" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/etValor"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_column="0" />

                <Button
                    android:id="@+id/btnData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/selecione"
                    android:layout_column="1" />

            </TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/descricao"/>
            <EditText
                android:id="@+id/etDescrecao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"/>
            <EditText
                android:id="@+id/etLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gastei"
                    android:id="@+id/btnGastei"
                    android:layout_column="1" />
            </TableRow>


        </TableLayout>

    </LinearLayout>


</ScrollView>
